--- a/content/About.html
+++ b/content/About.html
@@ -99,6 +99,11 @@ init_mathjax();
 <script src="https://scrum-3.github.io/web/brython/brython.js"></script>
 <script src="https://scrum-3.github.io/web/brython/brython_stdlib.js"></script>
 -->
+<style>
+img.add_border {
+    border: 3px solid blue;
+}
+</style>
 
 </head>
 <body>
@@ -150,8 +155,8 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p><a href="https://github.com/mdecourse/cmsimde"></a></p><br /> </div>
+<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a> </p>
+<p></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
