--- a/content/HW.html
+++ b/content/HW.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='HW.html'>HW</a></li>
+                     <li><a href='About.html'>About</a><li><a href='HW.html'>HW</a></li>
                       </ul>
                 </nav>
               </div>
@@ -159,7 +159,7 @@ img.add_border {
 <li>編譯solvespace:<a href="https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s">https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s</a></li>
 </ol>
 <p></p>
-<div id="gtx-trans" style="position: absolute; left: -44px; top: 184px;">
+<div id="gtx-trans" style="position: absolute; left: -13px; top: 64.6667px;">
 <div class="gtx-trans-icon"></div>
 </div><br />About << <a href='About.html'>Previous</a> </div>
         
