--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='HW.html'>HW</a></li>
+                     <li><a href='About.html'>About</a><li><a href='HW.html'>HW</a></li>
                       </ul>
                 </nav>
               </div>
