--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,11 @@
 <h1>About</h1>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a> </p>
-<h1>HW</h1>
+<p>課程網頁:</p>
+<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
+<p>我的倉儲:</p>
+<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
+<h1>Homework</h1>
 <ol>
 <li>編譯solvespace:<a href="https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s">https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s</a></li>
+<li>介紹solvespace基本功能:<a href="https://www.youtube.com/watch?v=NdSVtv9dnuY">https://www.youtube.com/watch?v=NdSVtv9dnuY</a></li>
 </ol>
 <p></p>
-<div id="gtx-trans" style="position: absolute; left: -13px; top: 64.6667px;">
-<div class="gtx-trans-icon"></div>
-</div>
