--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='HW.html'>HW</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Homework.html'>Homework</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a> </p>
-<br /> <a href='HW.html'>Next</a> >> HW</div>
+    <div id="tipue_search_content"> <a href='Homework.html'>Next</a> >> Homework<br /><h1>About</h1>
+<p>課程網頁:</p>
+<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
+<p>我的倉儲:</p>
+<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
+<br /> <a href='Homework.html'>Next</a> >> Homework</div>
         
     <!-- footer -->
       <div class="container">
