--- a/content/Homework.html
+++ b/content/Homework.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='HW.html'>HW</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Homework.html'>Homework</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,14 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>HW</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Homework</h1>
 <ol>
 <li>編譯solvespace:<a href="https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s">https://www.youtube.com/watch?v=TBqRfUFudxw&amp;t=2s</a></li>
+<li>介紹solvespace基本功能:<a href="https://www.youtube.com/watch?v=NdSVtv9dnuY">https://www.youtube.com/watch?v=NdSVtv9dnuY</a></li>
 </ol>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: -13px; top: 64.6667px;">
-<div class="gtx-trans-icon"></div>
-</div><br />About << <a href='About.html'>Previous</a> </div>
+<p></p><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
