--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>2019 Fall 電腦輔助設計實習課程網頁</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -123,14 +123,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>s40523113 cad2019</h1>
+                <h1>s40523113 吳宜賢 cad2019</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">s40523113 cad2019</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">s40523113 吳宜賢 cad2019</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Homework.html'>Homework</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,12 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Homework.html'>Next</a> >> Homework<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
 <p>課程網頁:</p>
 <p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
 <p>我的倉儲:</p>
 <p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='Homework.html'>Next</a> >> Homework</div>
+<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
         
     <!-- footer -->
       <div class="container">
