--- a/content/w5.html
+++ b/content/w5.html
@@ -154,12 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
-<p>課程網頁:</p>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p>我的倉儲:</p>
-<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w5</h1>
+<p>介紹solvespace基本功能</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/MksM1VQJhYY" width="560"></iframe></p><br />w3 << <a href='w3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
       <div class="container">
