--- a/content/每週進度.html
+++ b/content/每週進度.html
@@ -154,12 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
-<p>課程網頁:</p>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p>我的倉儲:</p>
-<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>每週進度</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
