--- a/content/w7.html
+++ b/content/w7.html
@@ -154,8 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>每週進度</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <br /><h1>w7</h1>
+<p>任務一:整組統一網站架構、如下圖所示</p>
+<p><img alt="" height="112" src="./../images/chrome_3JIXCPVQDq.png" width="800"/></p>
+<p><img alt="" height="337" src="./../images/chrome_m3QKP27DpY.png" width="617"/></p>
+<p>任務二:solvespace已編譯證明</p>
+<p><img alt="" height="316" src="./../images/SciTE_ptvpDakb9a.png" width="790"/></p>
+<p>任務三:藉由範例操作solvespace</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p><br />w6 << <a href='w6.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
