--- a/content/w3.html
+++ b/content/w3.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">每週進度 << <a href='每週進度.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>w3</h1>
 <p>編譯solvespace</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nIbbkxiJwS0" width="560"></iframe></p><br />每週進度 << <a href='每週進度.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nIbbkxiJwS0" width="560"></iframe></p>
+<br />每週進度 << <a href='每週進度.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
