add my progress video

--- a/content/w7.html
+++ b/content/w7.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='期中報告.html'>期中報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,14 +154,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <br /><h1>w7</h1>
+    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w7</h1>
 <p>任務一:整組統一網站架構、如下圖所示</p>
 <p><img alt="" height="112" src="./../images/chrome_3JIXCPVQDq.png" width="800"/></p>
 <p><img alt="" height="337" src="./../images/chrome_m3QKP27DpY.png" width="617"/></p>
 <p>任務二:solvespace已編譯證明</p>
 <p><img alt="" height="316" src="./../images/SciTE_ptvpDakb9a.png" width="790"/></p>
 <p>任務三:藉由範例操作solvespace</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p><br />w6 << <a href='w6.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p>
+<br />w6 << <a href='w6.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
