--- a/config/content.htm
+++ b/config/content.htm
@@ -25,6 +25,4 @@
 <p>任務三:藉由範例操作solvespace</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p>
 <h1>期中報告</h1>
-<div id="gtx-trans" style="position: absolute; left: -5px; top: 4383.42px;">
-<div class="gtx-trans-icon"></div>
-</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
