--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -23,8 +23,11 @@
 <p>任務二:solvespace已編譯證明</p>
 <p><img alt="" height="316" src="/images/SciTE_ptvpDakb9a.png" width="790"/></p>
 <p>任務三:藉由範例操作solvespace</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p>
-<h1>期中報告</h1>
-<div id="gtx-trans" style="position: absolute; left: -5px; top: 4383.42px;">
-<div class="gtx-trans-icon"></div>
-</div>
+<p><br/><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p>
+<h2>w10</h2>
+<p>已在同組協同倉儲中fork</p>
+<p><img alt="" height="354" src="/images/chrome_cJop5x6QZT.png" width="800"/></p>
+<h2>w12</h2>
+<p>nx12介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
+<p>心得:藉由這次的範例來操作nx12，雖然<span>nx12的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><h2>w13</h2><h1>期中報告</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
