--- a/content/w10.html
+++ b/content/w10.html
@@ -154,12 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
-<p>課程網頁:</p>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p>我的倉儲:</p>
-<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w10</h1>
+<p>已在同組協同倉儲中fork</p>
+<p><img alt="" height="354" src="./../images/chrome_cJop5x6QZT.png" width="800"/></p>
+<br />w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
