--- a/content/w12.html
+++ b/content/w12.html
@@ -154,12 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
-<p>課程網頁:</p>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p>我的倉儲:</p>
-<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
+<p>nx3介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
+<p>心得:藉由這次的範例來操作nx3，雖然<span>nx3的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><br />w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
