--- a/content/w13.html
+++ b/content/w13.html
@@ -154,12 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每週進度.html'>Next</a> >> 每週進度<br /><h1>About</h1>
-<p>課程網頁:</p>
-<p><a href="http://mde.tw/cad2019/content/index.html">http://mde.tw/cad2019/content/index.html</a></p>
-<p>我的倉儲:</p>
-<p><a href="https://github.com/s40523113/cad2019">https://github.com/s40523113/cad2019</a> </p>
-<br /> <a href='每週進度.html'>Next</a> >> 每週進度</div>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w13</h1><br />w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
