--- a/content/w13.html
+++ b/content/w13.html
@@ -154,7 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w13</h1><br />w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w13</h1>
+<p>利用reveal來介紹<span>課程任務執行結果與心得。</span></p><br />w12 << <a href='w12.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
