add report video in w15

--- a/content/w15.html
+++ b/content/w15.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PWkKuOJ0tCI" width="560"></iframe></p>
-<p>nx12介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
-<p>心得:藉由這次的範例來操作nx12，雖然<span>nx12的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><br />w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w15</h1>
+<p>課程查驗</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe></p><br />w13 << <a href='w13.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
