--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,12 +39,12 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 電腦輔助機械設計製圖
 
-### KMOLab
+### s40523113
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 </small>
 
 [CMSimfly 網誌](./../blog/index.html)
