--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,8 +32,7 @@
 <p>nx12介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
 <p>心得:藉由這次的範例來操作nx12，雖然<span>nx12的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><h2>w13</h2>
 <p>利用reveal來介紹<span>課程任務執行結果與心得。</span></p>
-<h2><span>w15</span></h2>
-<div id="gtx-trans" style="position: absolute; left: -92px; top: 152.667px;">
-<div class="gtx-trans-icon"></div>
-</div><h1>期中報告</h1>
+<h2>w15</h2>
+<p>課程查驗</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
