--- a/config/content.htm
+++ b/config/content.htm
@@ -34,5 +34,6 @@
 <p>利用reveal來介紹<span>課程任務執行結果與心得。</span></p>
 <h2>w15</h2>
 <p>課程查驗</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe></p><h1>期中報告</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe>學習心得:</p>
+<p>這學期的課程，有很多軟體和程式要去認識，而且還要與其他組員進行參與討論以及協同，我認為可以藉由這次的課程，來學到更多的軟體應用。</p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
