--- a/content/w15.html
+++ b/content/w15.html
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w15</h1>
 <p>課程查驗</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe></p><br />w13 << <a href='w13.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe>學習心得:</p>
+<p>這學期的課程，有很多軟體和程式要去認識，而且還要與其他組員進行參與討論以及協同，我認為可以藉由這次的課程，來學到更多的軟體應用。</p><br />w13 << <a href='w13.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
