--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -142,7 +142,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a></li></ul><li><a href='期中報告.html'>期中報告</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='期中報告.html'>期中報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -153,4 +153,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='每週進度.html'>每週進度</a><ul><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a></li></ul><li><a href='期中報告.html'>期中報告</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='每週進度.html'>每週進度</a><ul><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='期中報告.html'>期中報告</a></li></ul></section></div></body></html>
