--- a/content/w16.html
+++ b/content/w16.html
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>每週進度</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w16</h1>
+<div id="gtx-trans" style="position: absolute; left: -71px; top: 596.333px;">
+<div class="gtx-trans-icon"></div>
+</div><br />w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
