add test in w16

--- a/config/content.htm
+++ b/config/content.htm
@@ -39,7 +39,5 @@
 <p>這學期的課程，有很多軟體和程式要去認識，而且還要與其他組員進行參與討論以及協同，我認為可以藉由這次的課程，來學到更多的軟體應用。</p>
 <p></p>
 <h2>w16</h2>
-<div id="gtx-trans" style="position: absolute; left: -71px; top: 596.333px;">
-<div class="gtx-trans-icon"></div>
-</div><h1>期中報告</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
