--- a/content/w16.html
+++ b/content/w16.html
@@ -155,9 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w16</h1>
-<div id="gtx-trans" style="position: absolute; left: -71px; top: 596.333px;">
-<div class="gtx-trans-icon"></div>
-</div><br />w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p><br />w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
