--- a/content/w16.html
+++ b/content/w16.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='期中報告.html'>期中報告</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='w17.html'>w17</a><li><a href='期中報告.html'>期中報告</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w16</h1>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p><br />w15 << <a href='w15.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p>
+<br />w15 << <a href='w15.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
