--- a/reveal/index.html
+++ b/reveal/index.html
@@ -47,7 +47,7 @@ CMSimfly 網際內容管理
 Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 </small>
 
-[CMSimfly 網誌](./../blog/index.html)
+[s40523113 blog](./../blog/index.html)
 
 
     </script>
@@ -75,12 +75,27 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# 數學符號與方程式
+# 課程內容
 
-Inline math equations go in like so: $\omega = d\phi / dt$. Display
-math should get its own line and be put in in double-dollarsigns:
+*利用可攜程式系統與網際內容管理系統
+*建立github倉儲系統與個人網頁
+*Solvespace 編譯、零組件繪圖與應用
+*Nx12繪圖應用
+*零組件轉入 V-rep 與 Webots 
+    </script>
+</section>
 
-$$I = \int \rho R^{2} dV$$
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+# Solvespace 編譯
+
+<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nIbbkxiJwS0" width="560"></iframe>
+
+<img alt="" height="316" src="/images/SciTE_ptvpDakb9a.png" width="790"/>
     </script>
 </section>
 
