edit solvespace in reveal

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -75,11 +75,16 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
     <script type="text/template">
 # 課程內容
 
-*利用可攜程式系統與網際內容管理系統
-*建立github倉儲系統與個人網頁
-*Solvespace 編譯、零組件繪圖與應用
-*Nx12繪圖應用
-*零組件轉入 V-rep 與 Webots 
+1.利用可攜程式系統與網際內容管理系統
+
+2.建立github倉儲系統與個人網頁
+
+3.Solvespace 編譯、零組件繪圖與應用
+
+4.Nx12繪圖應用
+
+
+5.零組件轉入 V-rep 與 Webots 
     </script>
 </section>
 
