add nx12 in reveal

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -75,16 +75,16 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
     <script type="text/template">
 # 課程內容
 
-1.利用可攜程式系統與網際內容管理系統
+* 利用可攜程式系統與網際內容管理系統
 
-2.建立github倉儲系統與個人網頁
+* 建立github倉儲系統與個人網頁
 
-3.Solvespace 編譯、零組件繪圖與應用
+* Solvespace 編譯、零組件繪圖與應用
 
-4.Nx12繪圖應用
+* Nx12繪圖應用
 
 
-5.零組件轉入 V-rep 與 Webots 
+* 零組件轉入 V-rep 與 Webots 
     </script>
 </section>
 
@@ -92,9 +92,24 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 						
 <section data-markdown>
     <script type="text/template">
-# Solvespace 編譯
+###Solvespace 編譯
 
 <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nIbbkxiJwS0" width="560"></iframe>
+
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+###nx12心得與介紹
+
+<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PWkKuOJ0tCI" width="560"></iframe>
+
+* nx12介紹:可將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。
+
+* 心得:藉由這次的範例來操作nx12，雖然nx12的工作介面以及功能用法，與inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體
 
     </script>
 </section>
