edit nx12in reveal

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -115,6 +115,18 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 
 
 						
+<section data-markdown>
+    <script type="text/template">
+## 繪製簡易越野車
+
+* 利用solvespacec繪製越野車
+
+
+    </script>
+</section>
+
+
+						
 <section>
 <section data-markdown>
     <script type="text/template">
