--- a/config/content.htm
+++ b/config/content.htm
@@ -31,15 +31,15 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PWkKuOJ0tCI" width="560"></iframe></p>
 <p>nx12介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
 <p>心得:藉由這次的範例來操作nx12，雖然<span>nx12的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><h2>w13</h2>
-<p>利用reveal來介紹<span>課程任務執行結果與心得。</span></p>
-<h2>w15</h2>
+<p>利用reveal來介紹<span>課程任務執行結果。</span></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Yngrx-hPtf8" width="560"></iframe></p><h2>w15</h2>
 <p>課程查驗</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/XAsffwEU-8o" width="560"></iframe></p>
 <p>學習心得:</p>
 <p>這學期的課程，有很多軟體和程式要去認識，而且還要與其他組員進行參與討論以及協同，我認為可以藉由這次的課程，來學到更多的軟體應用。</p>
 <p></p>
 <h2>w16</h2>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p>
-<h1>w17</h1>
+<p>利用solvespace繪製越野車，並轉入vrep與weboot中</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p><h1>w17</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YT5t1W7KZiM" width="560"></iframe></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
