--- a/content/w13.html
+++ b/content/w13.html
@@ -155,8 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w13</h1>
-<p>利用reveal來介紹<span>課程任務執行結果與心得。</span></p>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
+<p>利用reveal來介紹<span>課程任務執行結果。</span></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Yngrx-hPtf8" width="560"></iframe></p><br />w12 << <a href='w12.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
