--- a/content/w16.html
+++ b/content/w16.html
@@ -156,7 +156,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w16</h1>
 <p>利用solvespace繪製越野車，並轉入vrep與weboot中</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p><br />w15 << <a href='w15.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Zfbe15uwnQQ" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HIRC8rqvJt0" width="560"></iframe></p>
+<p><img alt="" height="398" src="./../images/solvespace_ll3OtIjNZp.png" width="800"/></p>
+<p>支架零件尺寸</p>
+<p><img alt="" height="425" src="./../images/solvespace_eCVvJmXYkt.png" width="800"/></p>
+<p><img alt="" height="425" src="./../images/solvespace_0GC0nLcbiR.png" width="800"/></p><br />w15 << <a href='w15.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
