--- a/reveal/index.html
+++ b/reveal/index.html
@@ -222,9 +222,10 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 						
 <section data-markdown>
     <script type="text/template">
-### 期末報告:w16 利用solvespace繪製越野車，並轉入vrep與weboot中
+### 期末報告:w16 利用solvespace繪製越野車，並轉入vrep
 
-<iframe width="560" height="315" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" src="https://www.youtube.com/embed/Yngrx-hPtf8"></iframe>
+<p><iframe width="560" height="315" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" src="https://www.youtube.com/embed/Zfbe15uwnQQ"></iframe></p>
+
     </script>
 </section>
 
@@ -232,11 +233,9 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 						
 <section data-markdown>
     <script type="text/template">
-## 繪製簡易越野車
+### 期末報告:w16 利用solvespace繪製越野車，並轉入vrep
 
-* 利用solvespacec繪製越野車
-
-
+<p><iframe width="560" height="315" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" src="https://www.youtube.com/embed/HIRC8rqvJt0"></iframe></p>
     </script>
 </section>
 
