--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -39,7 +39,11 @@
 <p>這學期的課程，有很多軟體和程式要去認識，而且還要與其他組員進行參與討論以及協同，我認為可以藉由這次的課程，來學到更多的軟體應用。</p>
 <p></p>
 <h2>w16</h2>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qAupiHYh1rg" width="560"></iframe></p>
-<h1>w17</h1>
+<p>利用solvespace繪製越野車，並轉入vrep與weboot中</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Zfbe15uwnQQ" width="560"></iframe></p>
+<p><img alt="" height="398" src="/images/solvespace_ll3OtIjNZp.png" width="800"/></p>
+<p>支架零件尺寸</p>
+<p><img alt="" height="425" src="/images/solvespace_eCVvJmXYkt.png" width="800"/></p>
+<p><img alt="" height="425" src="/images/solvespace_0GC0nLcbiR.png" width="800"/></p><h1>w17</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YT5t1W7KZiM" width="560"></iframe></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
