--- a/content/w17.html
+++ b/content/w17.html
@@ -155,7 +155,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>w17</h1>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YT5t1W7KZiM" width="560"></iframe></p><br />w16 << <a href='w16.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
+<p>設計阻尼減速，並裝在越野車上<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YT5t1W7KZiM" width="560"></iframe></p>
+<p>我的想法是聯想到，一般機車上的避震器的樣子，藉由彈簧來吸震。</p>
+<p><img alt="" height="425" src="./../images/solvespace_xnsLtJUdwZ.png" width="800"/></p>
+<p><img alt="" height="425" src="./../images/solvespace_aOUkuZVPQo.png" width="800"/></p>
+<p></p><br />w16 << <a href='w16.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
