加入ssh影片於簡報中

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -178,6 +178,17 @@ Created by [s40523113](https://s40523113.github.io/cad2019/content/index.html)
 						
 <section data-markdown>
     <script type="text/template">
+### 期末報告:w10 利用ssh與github連線
+
+<iframe width="560" height="315" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" src="https://www.youtube.com/embed/HiG-xanPav4"></iframe>
+
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
 ### 期末報告:w10 在同組協同倉儲中fork
 
 <img alt="" height="410" src="https://github.com/s40523113/cad2019/blob/master/images/chrome_cJop5x6QZT.png?raw=true" width="713">
