--- a/config/content.htm
+++ b/config/content.htm
@@ -25,9 +25,10 @@
 <p>任務三:藉由範例操作solvespace</p>
 <p><br/><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Z5Fv51x-zAI" width="560"></iframe></p>
 <h2>w10</h2>
+<p>利用ssh與github連線</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HiG-xanPav4" width="560"></iframe></p>
 <p>已在同組協同倉儲中fork</p>
-<p><img alt="" height="354" src="/images/chrome_cJop5x6QZT.png" width="800"/></p>
-<h2>w12</h2>
+<p><img alt="" height="354" src="/images/chrome_cJop5x6QZT.png" width="800"/></p><h2>w12</h2>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PWkKuOJ0tCI" width="560"></iframe></p>
 <p>nx12介紹:可<span>將多領域模擬技術融合到結構、動作、熱力、流體、多重物理與最佳化解決方案，且可以快速把模型建立範本，其中範本包括了模擬、製圖、驗證與其他工程最佳實務。</span></p>
 <p>心得:藉由這次的範例來操作nx12，雖然<span>nx12的工作介面以及功能用法，與</span>inventor、soildworks等常用的繪圖軟體大有不同，但隨著時代演變程式種類越來越多，身為學生的我們應好好把握這次的 機會來學習各個軟體</p><h2>w13</h2>
