--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -48,7 +48,7 @@
 <p><img alt="" height="425" src="/images/solvespace_0GC0nLcbiR.png" width="800"/></p><h1>w17</h1>
 <p>設計阻尼減速，並裝在越野車上<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YT5t1W7KZiM" width="560"></iframe></p>
 <p>我的想法是聯想到，一般機車上的避震器的樣子，藉由彈簧來吸震。</p>
-<p></p>
+<p><img alt="" height="425" src="/images/solvespace_xnsLtJUdwZ.png" width="800"/></p>
 <p><img alt="" height="425" src="/images/solvespace_aOUkuZVPQo.png" width="800"/></p>
 <p></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
