加入ssh影片結果於網頁中

--- a/content/w10.html
+++ b/content/w10.html
@@ -157,6 +157,7 @@ img.add_border {
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w10</h1>
 <p>利用ssh與github連線</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HiG-xanPav4" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4gN1piIibQY" width="560"></iframe></p>
 <p>已在同組協同倉儲中fork</p>
 <p><img alt="" height="354" src="./../images/chrome_cJop5x6QZT.png" width="800"/></p><br />w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
