--- a/config/content.htm
+++ b/config/content.htm
@@ -27,6 +27,7 @@
 <h2>w10</h2>
 <p>利用ssh與github連線</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HiG-xanPav4" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4gN1piIibQY" width="560"></iframe></p>
 <p>已在同組協同倉儲中fork</p>
 <p><img alt="" height="354" src="/images/chrome_cJop5x6QZT.png" width="800"/></p><h2>w12</h2>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PWkKuOJ0tCI" width="560"></iframe></p>
